--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Fondamento&display=swap");
-
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Raleway", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+}
+* {
+  font-family: inherit;
 }
 body::-webkit-scrollbar {
   display: none;
